--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.25.0"
+    "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
+    "lucide-preact": "^0.474.0",
+    "preact": "^10.25.0",
+    "react-chartjs-2": "^5.3.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
