--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "date-fns": "^4.1.0",
     "lucide-preact": "^0.474.0",
     "preact": "^10.25.0",
-    "react-chartjs-2": "^5.3.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
