--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "lucide-preact": "^0.474.0",
     "preact": "^10.25.0",
+    "preact-iso": "^2.6.2",
     "react-chartjs-2": "^5.3.0",
     "react-modal": "^3.16.3"
   },
